# 42-coursework

./: .gitmodules  README.md
0_libft/: Makefile  README.md  libft.h
1_getnextline/: README.md  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
1_printf/: Makefile  README.md  ft_printf.c  ft_printf_util.c  libftprintf.h
1_printf/libft/: Makefile  ft_itoa_numsys.c  ft_strjoin.c  libft.h
2_fdf/: Makefile
2_pipex/: Makefile  README.md  main.c  pipex.h  utils.c
2_pipex/libft/: ft_strjoin.c
2_pushswap/: Makefile  README.md  a.out  array_manipulation.c  checker_prog.c  commands.c  dbg.sh  main.c  push_swap  pushing.c  pushswap.h  rotation.c  search_median.c  sort_small.c  swapping.c
2_pushswap/dockerized_visualizer/: Dockerfile
2_so_long/: Makefile  README.md  collect.xpm  exit.xpm  exit1.xpm  main.c  map.ber  map2.ber  mapcheck.c  playermovement.c  putimg.c  seba.ber  seba1.ber  so_long.h  wall.xpm  wall1.xpm  wslDisp
3_minishell/: CMakeLists.txt  Makefile  README.md  builtins_1.c  builtins_2.c  execute.c  expand.c  expand_utils.c  expand_wildcard.c  here_doc.c  input_output.c  main.c  manage_terminal.c  minishell.h  parse.c  parse_err.c  parse_in.c  parse_io.c  parse_out.c  parse_utils.c  pipes_workflow.c  signals.c  struct_handling.c  utils.c
3_minishell/libft/: Makefile  libft.h
3_philosophers/: a.out  main.c  philo  philosophers.h
5_ft_containers/: Makefile  Vector.cpp  Vector.hpp  main.cpp
5_inception/: Dockerfile  Makefile
exam04/: microshell.c
(+275 files in other folders)
